Refine column GUI and presets with terminal-inclusive tray numbering